syntax = "proto3";

package docker_rpc.V1;

option go_package = "internal/rpc/V1/docker";

service DockerService {
  rpc CreateContainer(CreateRequest) returns (CreateResponse) {}
  rpc DeleteContainer(DeleteRequest) returns (DeleteResponse) {}
  rpc ListContainers(ListRequest) returns (ListResponse) {}
  rpc Echo(EchoRequest) returns (EchoResponse) {}
}

// todo figure out request/response
message CreateRequest {
}

message CreateResponse {
}

message DeleteRequest {
}

message DeleteResponse {
}

message ListRequest {
}

message ListResponse {
}

message Container {
}

message EchoRequest{
  string message = 1;
}

message EchoResponse{
  string messageResponse = 1;
}